--- a/YTSpotify.css
+++ b/YTSpotify.css
@@ -1,5 +1,5 @@
 .logo.ytmusic-logo {
-    height: 35px;
+    height: 35px!important;
     object-position: left;
     object-fit: cover;
     width: 38px;
